# opencv_rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/image/: Cargo.toml  lib.rs  rect.rs
crates/window/: Cargo.toml  attached.rs  lib.rs
src/: limiter.rs  main.rs
src/offsets/: mod.rs
src/sub_images/: mod.rs
src/support/: healer.rs  mod.rs
