[package]
name = "opencv_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
opencv = "0.91.3"
winapi = { version = "0.3.9", features = ["windef", "winuser"]}

image = { version = "0.1.0", path = "crates/image" }
window = { version = "0.1.0", path = "crates/window" }
clearscreen = "3.0.0"
tokio = { version = "1.37.0", features = ["full"] }
